### 24.03.26 - [x]  주문 페이지 상품 정보 반영 동적 페이지 개발 - [x]  베송지 등록 및 변경 페이지 개발 - [x]  배송지 등록 및 변경 기능     - 입력값 검증 로직 추가 필요
### 24.03.27
- [x]  배송지 삭제 기능
- [x]  주문 배송 정보에 배송지 가져오기 기능
- [x]  장바구니에서 선택한 아이템만 주문목록에 넣기 기능

### 24.03.28
- [x]  주문 기능 개발
    - 주문 상세 테이블 추가 설계
    - 주문 테이블 입력 - 주문 상세 테이블 입력 트랜잭션 처리
    - 트랜잭션 개념과 @Transtional 초기 설정 및 사용법에 대해 더 공부가 필요할듯..

### 24.03.29
- [x]  마이페이지 화면 개발
    - 문의 관리 메뉴 추가
    - 결제수단관리 메뉴 추가
    - 관리자의 경우 판매상품관리 메뉴 추가

### 24.03.30
- [x]  마이페이지 주문내역 화면 추가 개발
- 주문내역 리스트를 날짜별 > 주문코드별로 묶어서 표시
    - 날짜별로 묶고 날짜별 내역 안에서는 주문코드별로 묶어서 보여줘야함
- [x]  주문 취소, 교환/반품 신청, 주문 내역 삭제 기능 개발

### 24.03.31
- [x]  리뷰관리 페이지 개발

### 24.04.01
- [x]  리뷰 등록 및 수정, 리뷰 확인 페이지 개발
- [x]  리뷰 등록, 수정, 삭제 기능 개발
- 리뷰 삭제 해도 목록에 노출되는 현상 해결 V
- 이미지 삭제 시 db에서도 정보 삭제해서 엑박 안 나오게 해결 V

--- a/src/main/webapp/resources/css/header.css
+++ b/src/main/webapp/resources/css/header.css
@@ -51,19 +51,13 @@ button, ul, li
     color: bisque;
 }
 
-.logoArea
+
+#logoText
 {
-    display: flex;
-    justify-content: flex-end; /* div 자식 요소 우측부터 정렬 */
-    align-items: center;
+    text-align: center;
 }
 
-.logoArea > a
-{
-    margin-right: 10%;
-}
-
-.logoArea > a > span
+#logoText > a > span
 {
     font-size: 50pt;
     font-family: 나눔고딕 ExtraBold;
@@ -74,10 +68,11 @@ button, ul, li
 .logoArea > form
 {
     display: flex;
+    justify-content: flex-end;
     align-items: center;
 }
 
-.logoArea > form >  i
+.searchIcon
 {
     font-size: 35px;
     margin-left: 25px;
@@ -97,7 +92,6 @@ button, ul, li
     font-size: 12pt;
     font-weight: bold;
     font-family: 나눔고딕;
-    margin-left: 480px;
     outline: none; /* 클릭 시 테두리색 변경 없애기 */
 }
 
