--- a/src/main/webapp/resources/css/cart.css
+++ b/src/main/webapp/resources/css/cart.css
@@ -38,8 +38,8 @@ label
 .cartArea
 {
     margin-top: 5%;
-    margin-left: 20%;
-    width: 1600px;
+    margin-left: 15%;
+    width: 70%;
     height: 700px;
 }
 
@@ -102,7 +102,6 @@ label
 {
     width: 150px;
     height: 150px;
-    margin-left: 5%;
     background-color: darkgray;
     overflow: hidden;
 }
@@ -171,6 +170,13 @@ label
     display: flex;
     align-items: end;
 }
+
+.totalPriceText
+{
+    width: 130px;
+    text-align: right;
+}
+
 
 .totalPrice
 {
