--- a/src/main/webapp/resources/css/loginForm.css
+++ b/src/main/webapp/resources/css/loginForm.css
@@ -22,8 +22,8 @@ button:active
 .loginFormArea
 {
     margin-top: 5%;
-    margin-left: 20%;
-    width: 1600px;
+    margin-left: 15%;
+    width: 70%;
     height: 700px;
 }
 
