--- a/src/main/webapp/resources/css/orderResult.css
+++ b/src/main/webapp/resources/css/orderResult.css
@@ -20,8 +20,8 @@ button:active
 .resultFormArea
 {
     margin-top: 5%;
-    margin-left: 20%;
-    width: 1600px;
+    margin-left: 15%;
+    width: 70%;
     height: 700px;
 }
 
