--- a/src/main/webapp/resources/css/userRegistrationForm.css
+++ b/src/main/webapp/resources/css/userRegistrationForm.css
@@ -19,8 +19,8 @@ button:active
 .registerFormArea
 {
     margin-top: 5%;
-    margin-left: 20%;
-    width: 1600px;
+    margin-left: 15%;
+    width: 70%;
     height: 700px;
 }
 
